@@ -77,7 +77,7 @@ importFrom(haven, as_factor)
 importFrom(foreign, read.dbf, read.mtp, read.systat, read.epiinfo, read.arff, read.xport)
 importFrom(foreign, read.dta, read.spss)
 importFrom(foreign, write.dbf, write.arff)
-importFrom(feather, write_feather, read_feather)
+#importFrom(feather, write_feather, read_feather)
 importFrom(utils, read.table, read.csv, read.fwf, read.DIF, read.fortran)
 importFrom(utils, write.table, write.csv)
 importFrom(readODS, read.ods, getNrOfSheetsInODS)
