@@ -97,7 +97,8 @@ export_delim <- function(file, x, fwrite = FALSE, sep = "\t", row.names = FALSE,
 }
 
 .export.rio_feather <- function(file, x, ...){
-    write_feather(x = x, path = file)
+    requireNamespace("feather")
+    feather::write_feather(x = x, path = file)
 }
 .export.rio_sav <- function(file, x, ...){
     write_sav(data = x, path = file, ...)
